2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx: Add "pt_regs*" field to context.
	* tapsets.cxx (*): Correct kprobes API interface.
	* testsuite/buildok/three.stp: New test, copied from semok.
	* Makefile.am (install-data-local): Also install runtime/relayfs,
	so scripts can build against headers located thereunder. 
	* Makefile.in: Regenerated.
	
2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	translator/1120
	* main.cxx (main): Preset -R and -I options from environment
	variables (if set).  Pass guru mode flags to parser.
	* parse.cxx (privileged): New parser operation flag.  Update callers.
	(parse_embeddedcode): Throw an error if !privileged.
	(parse_functiondecl): Change signature.  Prevent duplicates.
	(parse_globals): Ditto.
	* parse.h: Corresponding changes.
	* tapset/*.stp: Beginnings of real tapset library, to replace
	previous builtins.
	* tapsets.cxx: Greatly reduce verbose mode output.
	* Makefile.am: Install & dist it.
	* runtest.sh: Refer to it.
	* Makefile.in, aclocal.m4: Regenerated.
	* testsuite/*/*.stp: Set guru mode via /bin/sh if needed.
	* testusite/*/*ko.stp: Homogenize shell scripts.
	
2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	translator/1120
	translator/1123
	* elaborate.cxx (semantic_pass_symbols): Print a more helpful
	error message around exceptions.
	* elaborate.h (systemtap_session): Add guru_mode field.
	* main.cxx (main): Initialize it to false.  Add version-sensitive
	script library searching.  Add more failure messages.
	* tapsets.cxx (dwflpp_assert): Add a decorative text parameter.
	Update callers.

2005-07-28  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (install-data-local): Add runtime/transport.
	* Makefile.in: regenerated.
	
2005-07-26  Graydon Hoare  <graydon@redhat.com>

	* elaborate.cxx: Revert builtin-function code.
	* translate.cxx: Likewise.
	* tapsets.{h,cxx}: Likewise.

2005-07-26  Martin Hunt  <hunt@redhat.com>

	* buildrun.cxx (compile_pass): Add -Wno-unused to CFLAGS because