@@ -1,5 +1,14 @@
 2005-07-28  Frank Ch. Eigler  <fche@redhat.com>
 
+	* stap.1: Beginnings of a man page.
+	* Makefile.am: Install it.  Comment out stpd LDADD goodies.
+	* configure.ac: Futilely complain about non-stpd LIBS.
+	* Makefile.in, configure.in: Regenerated.
+	* main.cxx (usage): Remove ARGS from help text, as nothing is
+	done with these yet.
+
+2005-07-28  Frank Ch. Eigler  <fche@redhat.com>
+
 	* translate.cxx: Add "pt_regs*" field to context.
 	* tapsets.cxx (*): Correct kprobes API interface.
 	* testsuite/buildok/three.stp: New test, copied from semok.
